<resources>
    <string name="app_name">Command</string>
    <string name="dashboard_learn">Learn</string>
    <string name="dashboard_questions">Questions</string>
    <string name="dashboard_progress">Progress</string>
    <string name="dashboard_account">Account</string>
    <string name="learn_description">These are our favorites and some of the ones we consider the most useful.</string>
    <string name="questions_description">Check your knowledge by trying our quiz of 20 questions.</string>
    <string name="progress_description">See how you improved your knowledge by the help of this application.</string>
    <string name="account_description">Manage your account here.</string>
    <string name="categories_misc">Miscellaneous</string>
    <string name="categories_security">Security</string>
    <string name="categories_network">Network</string>
    <string name="categories_storage">Storage</string>
    <string name="misc_description">Basic and most useful CMD commands</string>
    <string name="security_description">Essential CMD commands to ensure higher security</string>
    <string name="network_description">Essential CMD commands related to computer networks</string>
    <string name="storage_description">Essential CMD commands related to computer storage</string>
    <string name="experience_level">Select your level of experience on CMD:</string>
    <string name="beginner_header">Beginner Level</string>
    <string name="intermediate_header">Intermediate Level</string>
    <string name="advanced_header">Advanced Level</string>
    <string name="total_questions">OF 3</string>
    <string name="beginner_q_header">BEGINNER LEVEL</string>
    <string name="intermediate_q_header">INTERMEDIATE LEVEL</string>
    <string name="advanced_q_header">ADVANCED LEVEL</string>
    <string name="q1">What is the correct command for creating an undeletable folder?</string>
    <string name="q1_a1">mkdir con</string>
    <string name="q1_a2">md con</string>
    <string name="q1_a3">md config</string>
    <string name="q1_a4">mkdir config</string>
    <string name="q1_number">1</string>
    <string name="q2">What will happen if you enter "list disk" command on cmd?</string>
    <string name="q2_a1">PC will sleep</string>
    <string name="q2_a2">Hard disk will be formatted</string>
    <string name="q2_a3">List of disks will be shown</string>
    <string name="q2_a4">The health of the hard disk will be shown</string>
    <string name="q2_number">2</string>
    <string name="q3">What needs to be done before creating a hotspot using cmd?</string>
    <string name="q3_a1">Delete temp files</string>
    <string name="q3_a2">Clear the clipboard</string>
    <string name="q3_a3">Clear cache of the browser</string>
    <string name="q3_a4">Allow other network users to connect through the internet connection of the computer</string>
    <string name="q3_number">3</string>
    <string name="misc_header_1">Command Prompt Shortcuts</string>
    <string name="misc_header_2">How to Create an Undeletable Folder</string>
    <string name="misc_header_3">Get a Report on Your Laptop Battery</string>
    <string name="misc_header_4">How to Navigate Through Directories</string>
    <string name="misc_1_content">

        In the Command Prompt, right-click on the title bar to open the options and click Properties.
        \n\n
        Under the Options tab, find the section Edit Options and check the box next to Enable Ctrl key shortcuts.
        \n\n
        Copy selected text to clipboard:\n
        Ctrl + C / Ctrl + Insert
        \n\n
        Paste copied text: \n
        Ctrl + V / Shift + Insert
        \n\n
        Select all text in the current line (if there is no text in the current line, all text in the Command Prompt will be selected):\n
        Ctrl + A
        \n\n
        Move screen one line up/down (similar to scrolling):\n
        Ctrl + Up/Down
        \n\n
        Move screen one page up/down:\n
        Ctrl Page Up/Page Down
        \n\n
        Open Find window for searching through the Command Prompt:\n
        Ctrl F
        \n\n
        Enter Mark Mode (lets you select text with the mouse):\n
        Ctrl + M
        \n\n
        (In Mark Mode) Move cursor up, down, left, or right:\n
        Up/Down/Left/Right
        \n\n
        Move cursor up/down one line and select text:\n
        Shift+ Up/Down
        \n\n
        Move cursor left/right one character and select text:\n
        Shift + Left/Right
        \n\n
        Move cursor left/right one word and select text:\n
        Ctrl + Shift + Left/Right
        \n\n
        Move cursor up/down screen and select text:\n
        Shift + Page Up/Page Down
        \n\n
        Move cursor to the beginning/end of current line and select text:\n
        Shift + Home/End
        \n\n
        Move cursor to the beginning/end of screen buffer and select text and beginning/end of Command Prompt output:\n
        Ctrl + Shift + Home/End
    </string>
    <string name="misc_2_content">
        The basic concept behind this trick is the use of Keywords. Keywords are reserved words in any programming language that cannot be used as names of variables.
        \n\n
        Windows also uses certain keywords in its programming. Some of them are con, aux, Ipt1, Ipt2, Ipt3, Ipt 4, Ipt 5, Ipto, Ipt7, Ipt8 and Ipt9
        \n\n
        Open command prompt and change the root directory to location where you want to create an undeletable folder. For example,
        \n\n
        I want to create it in drive E. Now type following commands
        \n\n
        md con
        \n\n
        You can choose any keyword in place of con mentioned above. Now Windows will create an undeletable, unremovable folder in the drive you entered above.
        \n\n
        To Delete an undeletable folder, in command prompt, type
        \n\n
        rd con
        \n\n
        If it writes \the directory is not empty\' then type
        \n\n
        rd /S con
        \n\n
        Type Y.
        \n\n
        Now folder will successfully be deleted.
    </string>
    <string name="misc_3_content">
        Open command prompt. And to check battery energy, type
        \n\n
        powercfg/energy
        \n\n
        It will take 60 seconds to generate an energy report of your battery.
        \n\n
        To access the energy report, press
        \n\n
        Windows+R and type the location given below and this will open the report in web browser.
        \n\n
        C:\windows\system32 \ energy-report.html
        \n\n
        To check battery report, type the command in command prompt
        \n\n
        powercfg/batteryreport
        \n\n
        To view the Battery Report, press Windows+R and type the following location. The report will be displayed in web browser.
        \n\n
        C:\windows\system32 \battery-report.html
    </string>
    <string name="misc_4_content">
        Go to start menu and in the search box and type
        \n\n
        cmd
        \n\n
        Right click on command prompt icon and click on run as administrator.
        \n\n
        Press ok and your command prompt will operate successfully.
        \n\n
        To remove one path directory, just type cd..To add one directory, type cd followed by path\'s name like
        \n\n
        cd Users
        \n\n
        Note: Use cmd in run as administrator for command to operate successfully and always type command as it is so that it may not create any error.
    </string>
    <string name="security_header_1">
        How to Create Recovery Images
        \n\n
        in Windows 8
    </string>
    <string name="security_header_2">How to Remove an Admin Password</string>
    <string name="security_header_3">How to Remove a Pattern Lock</string>
    <string name="security_header_4">How to Make Backup Files or Folders</string>
    <string name="security_header_5">How to Encrypt Files for Safety</string>
    <string name="security_header_6">How to Remove Virus</string>
    <string name="security_1_content">

        Create a destination folder for the custom image. For example, create a folder named "Refreshimage" on drive C.
        \n\n
        Open an elevated command prompt. To do this, follow these steps:
        \n\n
                On the Start page, type cmd, press and hold or right-click Command Prompt,
        \n
                and then tap or click Run as administrator.
        \n\n
        Type the following command, and then press Enter:
        \n
                recimg -CreateImage drive:\folder
        \n\n
        For example, if you create "C:\Refreshimage" in step 1, run the following command:
        \n
                Ctrl + A recimg -CreateImage C:\Refreshimage
    </string>
    <string name="security_2_content">
        Open up an elevated Command Prompt.
        \n\n
        At the Command Prompt, type the below command and press Enter.
        \n\n
            net user Administrator *
        \n\n
        When you\’re prompted to type new password, just press Enter twice and
        \n
        it will remove your Windows administrator password.
    </string>
    <string name="security_3_content">
        Make sure to set up ADB (Android Debug Bridge) on your computer.
        \n
        Download ADB files and drivers.
        \n\n
        You have enabled “USB DEBUGGING” on your phone.
        \n
        Go to Settings > Developer Option > USB debugging > Check the box.
        \n\n
        Now when you are done and sure that you are following the checklist, follow the given steps:
        \n\n
        (1) cable and make sure that you have an active pattern lock.
        \n\n
        (2) The SHIFT key and select “Open with Command Prompt”. The mentioned folder will be in Local Disk C.
        \n\n
            1. On the CMD window, type adb devices and then hit enter.
        \n
            2. Now type adb shell, then hit enter.
        \n
            3. The shell will open and after that type su ( superuser, you are now a root user).
        \n
            4. After entering, type rm/data/system/gesture.key then hit enter.
        \n
            5. Unplug your phone from PC and you are good to go.
    </string>
    <string name="security_4_content">
        Open Command Prompt and type the command:
        \n
            ”  Robocopy  “ (or xcopy for windows xp users)
        \n\n
        Then give a Space and enter the source path (folder) followed by the destination
        \n
        path  (folder)
        \n
        i.e., robocopy “Path of the source folder” “Path of the destination folder” and press enter.
        \n\n
            Example : robocopy "F:\\desktop\\windows 8\\My Great Project"
        \n
            "D:\\Backup"
    </string>
    <string name="question_button">Continue</string>
</resources>