<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".a_question3">

    <ImageView
        android:id="@+id/actionbar_questions"
        android:layout_width="413dp"
        android:layout_height="106dp"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/actionbar_questions" />

    <TextView
        android:id="@+id/question_number"
        android:layout_width="34dp"
        android:layout_height="55dp"
        android:layout_marginEnd="320dp"
        android:layout_marginRight="320dp"
        android:layout_marginTop="110dp"
        android:elevation="2dp"
        android:text="@string/q3_number"
        android:textColor="@color/advanced_radioButton"
        android:textSize="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_questions"
        android:layout_width="76dp"
        android:layout_height="29dp"
        android:layout_marginEnd="210dp"
        android:layout_marginRight="210dp"
        android:layout_marginTop="137dp"
        android:elevation="2dp"
        android:text="@string/total_questions"
        android:textColor="@color/textSecondery"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="355dp"
        android:layout_height="290dp"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="355dp"
            android:layout_height="290dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/questionbg"
            android:layout_width="355dp"
            android:layout_height="290dp"
            android:src="@drawable/frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <TextView
        android:id="@+id/question_header"
        android:layout_width="137dp"
        android:layout_height="23dp"
        android:layout_marginTop="190dp"
        android:elevation="2dp"
        android:text="@string/advanced_q_header"
        android:textColor="@color/textPrimary"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/question_header_bg"
        android:layout_width="355dp"
        android:layout_height="58dp"
        android:layout_marginTop="170dp"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/advanced_question_header_bg" />

    <TextView
        android:id="@+id/question"
        android:layout_width="306dp"
        android:layout_height="57dp"
        android:layout_marginTop="248dp"
        android:text="@string/q1"
        android:textColor="@color/textPrimary"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="310dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rdo_answer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/advanced_radioButton"
            android:elevation="1dp"
            android:text="@string/q1_a1"
            android:textColor="#EBEBEB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rdo_answer2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/advanced_radioButton"
            android:elevation="1dp"
            android:text="@string/q1_a2"
            android:textColor="#EBEBEB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rdo_answer3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/advanced_radioButton"
            android:elevation="1dp"
            android:text="@string/q1_a3"
            android:textColor="#EBEBEB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/rdo_answer4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/advanced_radioButton"
            android:elevation="1dp"
            android:text="@string/q1_a4"
            android:textColor="#EBEBEB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="@drawable/advanced_level_button"
        android:text="@string/question_button"
        android:textAllCaps="false"
        android:textColor="@color/textPrimary"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginTop="65dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/account"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginLeft="340dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="65dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/account" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginEnd="345dp"
        android:layout_marginRight="345dp"
        android:layout_marginTop="65dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

</android.support.constraint.ConstraintLayout>