<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".dashboard">

    <ImageView
        android:id="@+id/actionbar_dashboard"
        android:layout_width="413dp"
        android:layout_height="107dp"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/actionbar_dashboard" />

    <FrameLayout
        android:id="@+id/dashboard_learn"
        android:layout_width="355dp"
        android:layout_height="90dp"
        android:layout_marginTop="145dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="355dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="355dp"
            android:layout_height="90dp"
            android:src="@drawable/frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/dashboard_questions"
        android:layout_width="355dp"
        android:layout_height="90dp"
        android:layout_marginTop="275dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="355dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="355dp"
            android:layout_height="90dp"
            android:src="@drawable/frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/dashboard_progress"
        android:layout_width="355dp"
        android:layout_height="90dp"
        android:layout_marginTop="405dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="355dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="355dp"
            android:layout_height="90dp"
            android:src="@drawable/frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/dashboard_account"
        android:layout_width="355dp"
        android:layout_height="90dp"
        android:layout_marginTop="535dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="355dp"
            android:layout_height="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="355dp"
            android:layout_height="90dp"
            android:src="@drawable/frame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <ImageView
        android:id="@+id/learn_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/learn_icon" />

    <ImageView
        android:id="@+id/question_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/questions_icon" />

    <ImageView
        android:id="@+id/progress_icon"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="385dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/progress_icon" />

    <ImageView
        android:id="@+id/account_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="505dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/account_icon" />

    <TextView
        android:id="@+id/learn_header"
        android:layout_width="47dp"
        android:layout_height="24dp"
        android:layout_marginTop="155dp"
        android:text="@string/dashboard_learn"
        android:textColor="@color/textPrimary"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/learn_description"
        android:layout_width="322dp"
        android:layout_height="32dp"
        android:layout_marginTop="190dp"
        android:gravity="center"
        android:text="@string/learn_description"
        android:textColor="@color/textdescription"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question_header"
        android:layout_width="83dp"
        android:layout_height="24dp"
        android:layout_marginTop="285dp"
        android:text="@string/dashboard_questions"
        android:textColor="@color/textPrimary"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question_description"
        android:layout_width="318dp"
        android:layout_height="34dp"
        android:layout_marginTop="315dp"
        android:gravity="center"
        android:text="@string/questions_description"
        android:textColor="@color/textdescription"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/progress_header"
        android:layout_width="72dp"
        android:layout_height="24dp"
        android:layout_marginTop="415dp"
        android:text="@string/dashboard_progress"
        android:textColor="@color/textPrimary"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/progress_description"
        android:layout_width="301dp"
        android:layout_height="37dp"
        android:layout_marginTop="445dp"
        android:gravity="center"
        android:text="@string/progress_description"
        android:textColor="@color/textdescription"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_header"
        android:layout_width="70dp"
        android:layout_height="24dp"
        android:layout_marginTop="545dp"
        android:text="@string/dashboard_account"
        android:textColor="@color/textPrimary"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_description"
        android:layout_width="314dp"
        android:layout_height="24dp"
        android:layout_marginTop="575dp"
        android:gravity="center"
        android:text="@string/account_description"
        android:textColor="@color/textdescription"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/home"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginTop="65dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/accounti"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginLeft="340dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="65dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/account" />


</android.support.constraint.ConstraintLayout>